# iotclaw

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  iotclaw.toml.example
data/: tool_experiences.json
skills/: chat.md  default.md  smart-home.md
src/: commands.rs  config.rs  cron.rs  daemon.rs  gateway.rs  hooks.rs  identity.rs  logging.rs  main.rs  security.rs  viewer.rs
src/agent/: cancellation.rs  llm_client.rs  loop_engine.rs  mod.rs  subagent.rs
src/context/: manager.rs
src/im/: approval.rs  emoji.rs  feishu.rs  feishu_full.rs  feishu_plugin.rs  feishu_server.rs  mod.rs  smart.rs  voice.rs  wechat.rs  wechat_full.rs
src/mcp/: client.rs  mod.rs  test_server.rs
src/memory/: core_memory.rs  mod.rs  scoped.rs  vector.rs
src/skills/: loader.rs
src/storage/: sqlite.rs
src/tools/: delegate.rs  exec.rs  experience.rs  feishu_doc.rs  iot_device.rs  mod.rs  registry.rs  screenshot.rs  time_tool.rs  vision.rs  weather.rs
